# sofa

collect_data/: CMakeLists.txt  DataCollector.cpp  DataCollector.h  init.cpp  liver_collection.scn
test/: test_results.py
train/: model_config.pth  pinn_model.py  train_pinn.py
